--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,12 @@
       build:
         runs-on: ubuntu-latest
         steps:
+          - name: Checkout source code
+            uses: actions/checkout@v2
+
+          - name: Generate deployment package
+            run: zip -r deploy.zip . -x '*.git*'
+           
           - name: Deploy to EB
             uses: einaregilsson/beanstalk-deploy@v18
             with:
